// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxInspectorSourceMapStatus should render for failed 1`] = `
<LogBoxButton
  backgroundColor={
    Object {
      "default": "transparent",
      "pressed": "rgba(51, 51, 51, 1)",
    }
  }
  hitSlop={
    Object {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 24,
      "paddingHorizontal": 8,
    }
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    source={
      Object {
        "testUri": "../Libraries/LogBox/UI/LogBoxImages/alert-triangle.png",
      }
    }
    style={
      Array [
        Object {
          "height": 14,
          "marginEnd": 4,
          "tintColor": "rgba(255, 255, 255, 0.4)",
          "width": 16,
        },
        Object {
          "tintColor": "rgba(243, 83, 105, 1)",
        },
        null,
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "includeFontPadding": false,
          "lineHeight": 16,
        },
        Object {
          "color": "rgba(243, 83, 105, 1)",
        },
      ]
    }
  >
    Source Map
  </Text>
</LogBoxButton>
`;

exports[`LogBoxInspectorSourceMapStatus should render for pending 1`] = `
<LogBoxButton
  backgroundColor={
    Object {
      "default": "transparent",
      "pressed": "rgba(51, 51, 51, 1)",
    }
  }
  hitSlop={
    Object {
      "bottom": 8,
      "left": 8,
      "right": 8,
      "top": 8,
    }
  }
  onPress={[Function]}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 12,
      "flexDirection": "row",
      "height": 24,
      "paddingHorizontal": 8,
    }
  }
>
  <ForwardRef(AnimatedComponentWrapper)
    source={
      Object {
        "testUri": "../Libraries/LogBox/UI/LogBoxImages/loader.png",
      }
    }
    style={
      Array [
        Object {
          "height": 14,
          "marginEnd": 4,
          "tintColor": "rgba(255, 255, 255, 0.4)",
          "width": 16,
        },
        Object {
          "tintColor": "rgba(250, 186, 48, 1)",
        },
        null,
      ]
    }
  />
  <Text
    style={
      Array [
        Object {
          "fontSize": 12,
          "includeFontPadding": false,
          "lineHeight": 16,
        },
        Object {
          "color": "rgba(250, 186, 48, 1)",
        },
      ]
    }
  >
    Source Map
  </Text>
</LogBoxButton>
`;

exports[`LogBoxInspectorSourceMapStatus should render null for complete 1`] = `null`;
